--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "axs": "^1.0.6",
     "isomorphic-fetch": "^2.2.1",
     "next": "^2.1.1",
+    "next-redux-wrapper": "^1.1.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint-config-xo-react": "^0.11.1",
