--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.1.1",
+    "next-routes": "^1.0.24",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -59,6 +60,7 @@
     "space": true,
     "rules": {
       "import/no-unassigned-import": 1,
+      "no-multi-assign": 1,
       "array-bracket-spacing": [
         2,
         "always"
