--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.1.1",
     "next-routes": "^1.0.24",
+    "palx": "^1.0.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
