--- a/package.json
+++ b/package.json
@@ -34,16 +34,15 @@
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.1.1",
     "next-routes": "^1.0.24",
-    "palx": "^1.0.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
-    "react-sidebar": "^2.3.2",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
     "redux-responsive": "^4.2.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reline": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "eslint-config-xo-react": "^0.11.1",
@@ -100,6 +99,7 @@
           "beforeSelfClosing": "always"
         }
       ],
+      "react/jsx-no-bind": 0,
       "react/forbid-component-props": 0,
       "react/require-default-props": 0,
       "react/jsx-handler-names": 0
