--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "axs": "^1.0.6",
+    "cxs": "^3.0.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.1.1",
