--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-particles-js": "^1.5.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
@@ -61,6 +62,7 @@
     "extends": "xo-react",
     "space": true,
     "rules": {
+      "unicorn/number-literal-case": 0,
       "no-multi-assign": 1,
       "array-bracket-spacing": [
         2,
