--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^15.5.4",
     "react-particles-js": "^1.5.0",
     "react-redux": "^5.0.4",
+    "react-view-pager": "^0.5.0-prerelease.10",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
     "redux-responsive": "^4.2.1",
