--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^2.2.0",
     "next-redux-wrapper": "^1.1.1",
+    "next-routes": "^1.0.24",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
