--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-ga": "^2.2.0",
     "react-particles-js": "^1.5.0",
     "react-redux": "^5.0.4",
     "react-view-pager": "^0.5.0-prerelease.10",
